@@ -1,1 +1,4 @@
 language: perl
+branches:
+  only:
+    - master
