@@ -30,7 +30,7 @@ my $prereqs  = {
     'Crypt::Eksblowfish' => '0.009',
     'Daemon::Control' => '0.000009',
     'Exporter::Tiny' => '0.026',
-    'File::DataClass' => 'v0.41.0',
+    'File::DataClass' => 'v0.42.0',
     'HTML::Accessors' => 'v0.11.0',
     'HTTP::Body' => '1.11',
     'HTTP::Message' => '6.06',
