@@ -85,6 +85,8 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .btn.btn-sidebar:hover{background-color:#000}
 .btn.btn-sidebar:hover .icon-bar{background-color:#569220}
 .btn.btn-submit{padding:4px 8px;font-family:Verdana,"Lucida Sans",tahoma,arial,sans-serif}
+.checkbox{background:url(../img/icons.png) -90px -300px no-repeat;cursor:pointer;display:inline-block;height:16px;vertical-align:baseline;width:16px}
+.checked{background:url(../img/icons.png) -120px -300px no-repeat transparent}
 .columns{height:100%}
 .columns .left-column{background-color:#f5f5f6;border-bottom:1px solid #adcb83;margin-left:0}
 .columns .left-column.span2p5{direction:rtl;overflow-x:hidden}
@@ -171,7 +173,7 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .page-header .container{clear:both}
 .page-header h1{margin:9px 0}
 .pathname,.standard-field{border:2px inset;-khtml-border-radius:5px;-webkit-border-radius:5px;border-radius:5px;-khtml-box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;box-sizing:border-box;font-size:15px;line-height:18px;margin:4px 0;min-width:400px;padding:3px 7px;vertical-align:middle}
-.pathname[disabled]{color:#000}
+.pathname[disabled],.standard-field[disabled]{color:#000}
 .pod dd p{width:auto}
 .pod dt{clear:left}
 .pod dt a,.pod li a{display:block;font-size:14px;line-height:18px}
@@ -181,6 +183,7 @@ table tr th:last-child,table tr td:last-child{border-right:1px solid #adcb83}
 .pod pre{font-size:14px;font-weight:700;margin-bottom:18px;min-width:500px;padding-top:18px;padding-right:18px}
 .pod ul ul{margin-bottom:0}
 .posts.post-list{list-style:none;overflow:hidden}
+.prompt{font-size:14px;font-weight:400;font-family:"Roboto Slab","Times New Roman","Times","serif"}
 .pull-left{float:left;text-align:left}
 .pull-right{float:right;text-align:right}
 .responsive-collapse{background-color:#adcb83;border-bottom:1px solid #adcb83;display:none;padding:9px 18px}
